Started implementing the project

--- a/AIND-Simulated_Annealing.ipynb
+++ b/AIND-Simulated_Annealing.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -88,12 +88,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
+    "from math import exp\n",
+    "\n",
     "def simulated_annealing(problem, schedule):\n",
     "    \"\"\"The simulated annealing algorithm, a version of stochastic hill climbing\n",
     "    where some downhill moves are allowed. Downhill moves are accepted readily\n",
@@ -133,8 +135,22 @@
     "    AIMA simulated_annealing() pseudocode\n",
     "        https://github.com/aimacode/aima-pseudocode/blob/master/md/Simulated-Annealing.md\n",
     "    \"\"\"     \n",
-    "    raise NotImplementedError\n",
-    "    "
+    "    t=1\n",
+    "    current = problem\n",
+    "    while(True):\n",
+    "        temp = schedule(t)\n",
+    "        if temp == 0: \n",
+    "            return problem\n",
+    "        successors = current.successors() \n",
+    "        successor = successors[random.randint(0, len(successors))]\n",
+    "        delta = problem.get_value(current) - problem.get_value(successor)\n",
+    "        if delta > 0:\n",
+    "            current = successor\n",
+    "        else :\n",
+    "            probability = exp(delta/temp)\n",
+    "            if random.random() < probability:\n",
+    "                current = successor\n",
+    "        t+=1"
    ]
   },
   {
@@ -213,7 +229,13 @@
     "        In general, a path of N cities will have N neighbors (note that path wraps\n",
     "        around the end of the list between the first and last cities).\n",
     "        \"\"\"\n",
-    "        raise NotImplementedError\n",
+    "        successors = []\n",
+    "        for i in range(len(self.path)):\n",
+    "            new_path = self.path.copy()\n",
+    "            j = (i+1)%len(self.path)\n",
+    "            new_path[i], new_path[j] = new_path[j], new_path[i]\n",
+    "            successors.append(TravelingSalesmanProblem(new_path))\n",
+    "        return successors\n",
     "\n",
     "    def get_value(self):\n",
     "        \"\"\"Calculate the total length of the closed-circuit path of the current\n",
@@ -426,29 +448,31 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:aind]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-aind-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 0
 }
